--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:Q3gjbHkB1tJXwLdwpJJCDdJ7E6qY6mJfk72YHgezOc4=
 APP_ENV=production
 APP_DEBUG=false
-APP_URL=https://booking-system-production-bfd5.up.railway.app
+APP_URL=laravelproject-production-75e1.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
